--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^7.4.19|^8.0",
         "barryvdh/laravel-dompdf": "^2.0",
-        "doctrine/dbal": "*",
+        "doctrine/dbal": "^3.8",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
